--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body {
   padding: 0;
 }
 
-/* HEADER */
 header {
   height: 150px;
   width: 100%;
@@ -59,7 +58,7 @@ header button:hover {
 .hero {
   height: 350px;
   width: 100%;
-  background: linear-gradient(135deg, #e95f5f 0%, #ff8a3d 100%);
+  background: linear-gradient(135deg, #b11e1e 0%, #753c16 100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -108,6 +107,7 @@ header button:hover {
   margin: 25px 0 10px 20px;
   font-size: 1.4rem;
   font-weight: 600;
+  color: whitesmoke;
 }
 
 /* Cards */
@@ -186,11 +186,6 @@ header button:hover {
 .welcome-box.visible {
   opacity: 1;
   transform: translateY(0);
-}
-
-#welcome {
-  background: rgba(200,30,30,.7);
-  color: #ececec;
 }
 
 #welcome2 {
