--- a/styles.css
+++ b/styles.css
@@ -300,6 +300,10 @@ header button:hover {
   box-shadow: 0 4px 10px rgba(0,0,0,.15);
   scroll-snap-align: start;
 }
+.NosFleurs div img{
+  height: 100%;
+  width: 100%;
+}
 
 /* HABITS GRID */
 .closthes {
