--- a/styles.css
+++ b/styles.css
@@ -303,6 +303,8 @@ header button:hover {
 .NosFleurs div img{
   height: 100%;
   width: 100%;
+  border-radius: 10px;
+  scroll-snap-type: mandatory;
 }
 
 /* HABITS GRID */
